# BazelStudy

./: README.md  WORKSPACE.bazel
bazel-extending/: .bazelrc  README.md  WORKSPACE.bazel
bazel-extending/macros/: BUILD.bazel  macro.bzl
bazel-extending/rules/: BUILD.bazel  rule.bzl
bazel-extending/select/: BUILD.bazel  select.bzl
bazel-mystery/cars/: BUILD.bazel
bazel-mystery/crime_scene_reports/: BUILD
bazel-mystery/interviews/: BUILD
bazel-mystery/people/: BUILD
bazel-study/: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel
bazel-study/projects/calculator/: BUILD.bazel  calculator.py
bazel-study/projects/go_hello_world/: BUILD.bazel  go.mod  hello_world.go  hello_world_test.go
bazel-study/projects/go_web/: BUILD.bazel  go.mod  main.go
bazel-study/projects/my-python-app/: BUILD.bazel  main.py
bazel-study/projects/projectB/: BUILD.bazel
projects/calculator/: BUILD.bazel  calculator_test.py
projects/go_hello_world/: BUILD.bazel  hello_world_test.go
projects/go_web/: BUILD.bazel  go.mod
projects/my-python-app/: BUILD.bazel  main.py
projects/projectB/: BUILD.bazel
