load("@python_deps//:requirements.bzl", "requirement") # "python_deps" matches definition in WORKSPACE.bazels


load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "main",
    srcs = ["main.py"],
    deps = [
        "//projects/calculator:calculator",
        requirement("Flask"),
    ],
)