package(default_visibility = ["//visibility:private"])

py_library(
    name = "calculator",
    srcs = ["calculator.py"],
    visibility = ["//projects/my-python-app:__subpackages__"], # this library is only visible to my-python-app package and it's subpackages (if any)
)

py_test(
    name = "calculator_test",
    srcs = ["calculator_test.py"],
    deps = [
        "//projects/calculator",
    ],
)
